support_tools/swigwin-3.0.12/Examples/test-suite/errors/pp_macro_inline_unterminated.i
%module xxx

%define foo(a,x)
int ii;
%enddef

%inline %{
struct Struct {
foo(2,
};
%}
