support_tools/swigwin-3.0.12/Examples/test-suite/errors/pp_macro_inline_unterminated.stderr
pp_macro_inline_unterminated.i:9: Error: Unterminated call invoking macro 'foo'
pp_macro_inline_unterminated.i:12: Error: Syntax error in input(3).
